[gd_scene load_steps=6 format=2]

[ext_resource path="res://Scripts/Grid.gd" type="Script" id=1]
[ext_resource path="res://square.png" type="Texture" id=2]
[ext_resource path="res://botao-de-pausa.png" type="Texture" id=3]
[ext_resource path="res://magnifying-glass.png" type="Texture" id=4]
[ext_resource path="res://clear.png" type="Texture" id=5]

[node name="Grid" type="Node2D"]
script = ExtResource( 1 )

[node name="CellContainer" type="Node2D" parent="."]

[node name="CellPopup" type="WindowDialog" parent="."]
margin_left = 238.0
margin_top = 80.0
margin_right = 474.0
margin_bottom = 244.0
window_title = "Contents in cell 1,1"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TokenLabel" type="Label" parent="CellPopup"]
margin_left = 8.0
margin_top = 9.11893
margin_right = 172.0
margin_bottom = 23.1189
text = "Number of Tokens in cell:"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AgentLabel" type="Label" parent="CellPopup"]
margin_left = 8.0
margin_top = 64.7806
margin_right = 152.0
margin_bottom = 78.7806
text = "Agents present in cell:"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TokenEdit" type="LineEdit" parent="CellPopup"]
margin_left = 14.0
margin_top = 27.5909
margin_right = 101.0
margin_bottom = 51.5909
text = "0"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TokenButton" type="Button" parent="CellPopup"]
margin_left = 112.399
margin_top = 27.6985
margin_right = 224.399
margin_bottom = 50.6985
text = "Confirm Change"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AgentScroller" type="ScrollContainer" parent="CellPopup"]
margin_left = 7.0
margin_top = 85.2806
margin_right = 234.0
margin_bottom = 157.281
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AgentList" type="VBoxContainer" parent="CellPopup/AgentScroller"]
margin_right = 210.0
margin_bottom = 260.0
rect_min_size = Vector2( 210, 0 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button" type="Button" parent="CellPopup/AgentScroller/AgentList"]
margin_right = 210.0
margin_bottom = 20.0
text = "aaaaaaaaaaaaaaaaaaaaa"

[node name="Button2" type="Button" parent="CellPopup/AgentScroller/AgentList"]
margin_top = 24.0
margin_right = 210.0
margin_bottom = 44.0
text = "aaaaaaaaaaaaaaaaaaaaa"

[node name="Button3" type="Button" parent="CellPopup/AgentScroller/AgentList"]
margin_top = 48.0
margin_right = 210.0
margin_bottom = 68.0
text = "aaaaaaaaaaaaaaaaaaaaa"

[node name="Button4" type="Button" parent="CellPopup/AgentScroller/AgentList"]
margin_top = 72.0
margin_right = 210.0
margin_bottom = 92.0
text = "aaaaaaaaaaaaaaaaaaaaa"

[node name="Button5" type="Button" parent="CellPopup/AgentScroller/AgentList"]
margin_top = 96.0
margin_right = 210.0
margin_bottom = 116.0
text = "aaaaaaaaaaaaaaaaaaaaa"

[node name="Button6" type="Button" parent="CellPopup/AgentScroller/AgentList"]
margin_top = 120.0
margin_right = 210.0
margin_bottom = 140.0
text = "aaaaaaaaaaaaaaaaaaaaa"

[node name="Button7" type="Button" parent="CellPopup/AgentScroller/AgentList"]
margin_top = 144.0
margin_right = 210.0
margin_bottom = 164.0
text = "aaaaaaaaaaaaaaaaaaaaa"

[node name="Button8" type="Button" parent="CellPopup/AgentScroller/AgentList"]
margin_top = 168.0
margin_right = 210.0
margin_bottom = 188.0
text = "aaaaaaaaaaaaaaaaaaaaa"

[node name="Button9" type="Button" parent="CellPopup/AgentScroller/AgentList"]
margin_top = 192.0
margin_right = 210.0
margin_bottom = 212.0
text = "aaaaaaaaaaaaaaaaaaaaa"

[node name="Button10" type="Button" parent="CellPopup/AgentScroller/AgentList"]
margin_top = 216.0
margin_right = 210.0
margin_bottom = 236.0
text = "aaaaaaaaaaaaaaaaaaaaa"

[node name="Button11" type="Button" parent="CellPopup/AgentScroller/AgentList"]
margin_top = 240.0
margin_right = 210.0
margin_bottom = 260.0
text = "aaaaaaaaaaaaaaaaaaaaa"

[node name="RightLimit" type="Position2D" parent="."]
position = Vector2( 764.928, 24 )

[node name="square" type="Sprite" parent="."]
modulate = Color( 0.2, 0.2, 0.2, 1 )
position = Vector2( 910.764, 34.3974 )
scale = Vector2( 2.9375, 0.778392 )
texture = ExtResource( 2 )

[node name="PlayButt" type="TextureButton" parent="."]
margin_left = 825.699
margin_top = 20.011
margin_right = 1337.7
margin_bottom = 532.011
rect_scale = Vector2( 0.05, 0.05 )
focus_mode = 0
enabled_focus_mode = 0
texture_normal = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="InspectButt" type="TextureButton" parent="."]
margin_left = 854.0
margin_top = 20.0
margin_right = 1366.0
margin_bottom = 532.0
rect_min_size = Vector2( 512, 512 )
rect_scale = Vector2( 0.025, 0.025 )
focus_mode = 0
enabled_focus_mode = 0
texture_normal = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ClearButt" type="TextureButton" parent="."]
margin_left = 884.498
margin_top = 20.011
margin_right = 1396.5
margin_bottom = 532.011
rect_scale = Vector2( 0.05, 0.05 )
focus_mode = 0
enabled_focus_mode = 0
texture_normal = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GoBackButton" type="Button" parent="."]
margin_left = 921.236
margin_top = 19.0
margin_right = 993.236
margin_bottom = 49.0
text = "Go Back"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AgentLabel" type="Label" parent="."]
margin_left = 824.281
margin_top = 76.8718
margin_right = 868.281
margin_bottom = 107.872
text = "Agents:
"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NewAgentButt" type="Button" parent="."]
margin_left = 824.281
margin_top = 94.9702
margin_right = 905.281
margin_bottom = 114.97
text = "New Agent"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AgentScroll" type="ScrollContainer" parent="."]
margin_left = 830.0
margin_top = 122.0
margin_right = 1017.0
margin_bottom = 312.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="EditAgentList" type="VBoxContainer" parent="AgentScroll"]

[node name="SpaceLabel" type="Label" parent="."]
margin_left = 824.281
margin_top = 332.315
margin_right = 915.281
margin_bottom = 363.315
text = "Shared Places:
"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SpaceScroll" type="ScrollContainer" parent="."]
margin_left = 830.0
margin_top = 353.0
margin_right = 1017.0
margin_bottom = 515.0
scroll_horizontal_enabled = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="EditSpaceList" type="VBoxContainer" parent="SpaceScroll"]

[node name="EditInstrunctionsLabel" type="Label" parent="."]
margin_left = 786.582
margin_top = 541.871
margin_right = 1019.58
margin_bottom = 589.871
text = "You are in Edit Mode:
 Place agent with left mouse click
 Erase agents with right mouse click"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Timer" type="Timer" parent="."]
wait_time = 0.3
autostart = true

[connection signal="pressed" from="CellPopup/TokenButton" to="." method="_on_TokenButton_pressed"]
[connection signal="pressed" from="PlayButt" to="." method="_on_PlayButt_pressed"]
[connection signal="pressed" from="InspectButt" to="." method="_on_InspectButt_pressed"]
[connection signal="pressed" from="ClearButt" to="." method="_on_ClearButt_pressed"]
[connection signal="pressed" from="GoBackButton" to="." method="_on_GoBackButton_pressed"]
[connection signal="pressed" from="NewAgentButt" to="." method="_on_NewAgentButt_pressed"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
